testdata/language-features/basic-values/if03.reject.out
type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ trace
!type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ tooltips
1:13-1:15
    ()